# esptank_esp32

./: .gitignore  CMakeLists.txt  README.md  config.sh  flash.sh  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  adc.c  adc.h  ble_server.c  ble_spp_server_demo.c  bt_server.c  idf_component.yml  motor.c  motor.h  sound.c  sound.h  tcp_server.c  tts.c  tts.h
